# azure-pipelines-agent

./: CMakeLists.txt  README.md  Vagrantfile  azure-pipelines.yml
dockeragent/: Dockerfile  Dockerfile.amd64-ubuntu1604-cuda100  Dockerfile.amd64-ubuntu1604-cuda101  Dockerfile.amd64-ubuntu1604-cuda92  dockeragent.service  start.sh
python/: manager.py
src/: main.cu
